# agentdesk

./: 01_PRD.md  OPENAI_ONLY.md  PRD.md  README.md  SETUP.md  docker-compose.yml  package-lock.json  package.json
backend/: .env.example  .gitignore  02_TRS.md  API_TESTING.md  ARCHITECTURE.md  COMPLETE.md  DEPLOYMENT.md  Dockerfile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  env.template  medvoice-backend-prd.md  nest-cli.json  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run_agent.py  setup.sh  smoke_test.py  tsconfig.json
backend/agent/: __init__.py  agent.py  config.py  provider_factory.py  templates.py  tools.py
backend/alembic/: env.py
backend/alembic/versions/: 001_agentdesk_schema.py  001_initial.py  ecdb9f35bb3e_add_debug_columns_to_voice_call_records.py
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: agencies.py  billing.py  businesses.py  calls.py  deps.py  numbers.py  webhooks.py
backend/app/core/: __init__.py  celery_app.py  celery_schedule.py  config.py  database.py  dependencies.py  rate_limit.py  redis.py  security.py
backend/app/models/: __init__.py  agency.py  appointment.py  audit_log.py  base.py  business.py  call.py  doctor.py  notification.py  patient.py  user.py  voice_call_record.py
backend/app/routers/: appointments.py  auth.py  calls.py  doctors.py  livekit.py  notifications.py  patients.py  webhooks.py
backend/app/schemas/: __init__.py  appointment.py  auth.py  common.py
backend/app/services/: __init__.py  appointment_service.py  audit_service.py  availability_service.py  doctor_service.py  notification_service.py  patient_service.py  voice_agent_tools.py
backend/app/tasks/: notification_tasks.py  notifications.py
backend/apps/appointments/: Dockerfile
backend/apps/appointments/src/: main.ts
backend/apps/auth/: Dockerfile
backend/apps/auth/src/: main.ts
backend/apps/gateway/: Dockerfile  tsconfig.app.json
backend/apps/gateway/src/: app.module.ts  main.ts
backend/apps/notifications/: Dockerfile
backend/apps/voice-agent/: Dockerfile  tsconfig.app.json
backend/scripts/: seed_admin.py  seed_calls.py  seed_data.py  seed_doctors.py  seed_patient.py  seed_specific_doctor.py
backend/src/: app.module.ts  main.ts
backend/src/common/: health.controller.ts
backend/tests/: conftest.py  test_appointments.py  test_auth.py  test_availability.py  test_integration.py  test_security.py  test_voice_agent_tools.py
(+256 files in other folders)
