[project]
name = "agentdesk-backend"
version = "0.1.0"
description = "AgentDesk — White-label AI voice agent platform"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",

    # LiveKit voice infra
    "livekit-agents>=1.0.0",
    "livekit-plugins-deepgram>=1.0.0",
    "livekit-plugins-openai>=1.0.0",
    "livekit-plugins-cartesia>=1.0.0",
    "livekit-plugins-silero>=1.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # Config + validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",

    # Redis
    "redis[hiredis]>=5.2.0",

    # Auth (Clerk JWT verification)
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.28.0",

    # Twilio
    "twilio>=9.4.0",

    # Stripe
    "stripe>=11.4.0",

    # Utilities
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
